# OIBSIP

./: .env  pyproject.toml
app/: auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  router.py  schemas.py  services.py
app/tests/: test_router.py
